@@ -814,6 +814,12 @@ static int getpdfomitcharset(lua_State * L)
     return 1 ;
 }
 
+static int getpdfomitinfodict(lua_State * L)
+{
+    lua_pushinteger(L, (pdf_omit_infodict));
+    return 1 ;
+}
+
 static int setpdfgentounicode(lua_State * L)
 {
     if (lua_type(L, 1) == LUA_TNUMBER) {
@@ -834,6 +840,14 @@ static int setpdfomitcharset(lua_State * L)
 {
     if (lua_type(L, 1) == LUA_TNUMBER) {
         set_pdf_omit_charset(lua_tointeger(L, 1));
+    }
+    return 0 ;
+}
+
+static int setpdfomitinfodict(lua_State * L)
+{
+    if (lua_type(L, 1) == LUA_TNUMBER) {
+        set_pdf_omit_infodict(lua_tointeger(L, 1));
     }
     return 0 ;
 }
@@ -1350,11 +1364,13 @@ static const struct luaL_Reg pdflib[] = {
     { "getgentounicode", getpdfgentounicode },
     { "getomitcidset", getpdfomitcidset },
     { "getomitcharset", getpdfomitcharset },
+    { "getomitinfo", getpdfomitinfodict },
     { "setinclusionerrorlevel", setpdfinclusionerrorlevel },
     { "setignoreunknownimages", setpdfignoreunknownimages },
     { "setgentounicode", setpdfgentounicode },
     { "setomitcidset", setpdfomitcidset },
     { "setomitcharset", setpdfomitcharset },
+    { "setomitinfo", setpdfomitinfodict },
     { "setforcefile", setforcefile },
     { "mapfile", l_mapfile },
     { "mapline", l_mapline },
